force-app/main/default/objects/Job_Posting__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Name of the job searcher (e.g., Abby or Matt). Used to filter jobs by person in multi-user setup.</description>
    <label>Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>