force-app/main/default/objects/Job_Posting__c/fields/Quick_Score__c.field-meta.xml
<CustomField>
    <fullName>Quick_Score__c</fullName>
    <description>Pre-AI score from Python job search (0-10). Used for initial filtering before expensive Claude AI analysis.</description>
    <label>Quick Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>