force-app/main/default/objects/Job_Posting__c/listViews/Abbys_Jobs.listView-meta.xml
<ListView>
    <fullName>Abbys_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Company__c</columns>
    <columns>Location__c</columns>
    <columns>Fit_Score__c</columns>
    <columns>ND_Friendliness_Score__c</columns>
    <columns>Salary_Min__c</columns>
    <columns>Salary_Max__c</columns>
    <columns>Provider__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Quick_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_Name__c</field>
        <operation>equals</operation>
        <value>Abby</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Abby's Jobs</label>
    <language>en_US</language>
</ListView>