force-app/main/default/objects/Job_Posting__c/listViews/High_Priority_Jobs.listView-meta.xml
<ListView>
    <fullName>High_Priority_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Company__c</columns>
    <columns>Fit_Score__c</columns>
    <columns>ND_Friendliness_Score__c</columns>
    <columns>Salary_Min__c</columns>
    <columns>Salary_Max__c</columns>
    <columns>Green_Flags__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fit_Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>8</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>High Priority Jobs (8+)</label>
    <language>en_US</language>
</ListView>